# hash-comparison

./: Cargo.toml  README.md  build.rs  output.txt
benches/: hash.rs
criterion/ahash/ahash (+aes +ssse3)/base/: estimates.json  tukey.json
criterion/ahash/ahash (+aes +ssse3)/change/: estimates.json
criterion/ahash/ahash (+aes +ssse3)/new/: benchmark.json  sample.json
criterion/ahash/ahash (+aes +ssse3)/report/: index.html
criterion/ahash/ahash (+aes +ssse3)_2/base/: sample.json  tukey.json
criterion/ahash/ahash (+aes +ssse3)_2/change/: estimates.json
criterion/ahash/ahash (+aes +ssse3)_2/new/: benchmark.json  estimates.json
criterion/ahash/ahash (+aes +ssse3)_2/report/: index.html
criterion/ahash/ahash (+aes +ssse3)_3/base/: benchmark.json  sample.json  tukey.json
criterion/ahash/report/: index.html
criterion/hash64 (4B, 8B, 16B) v2.0/report/: index.html
criterion/hash64 (4B, 8B, 16B)/report/: index.html
criterion/hash64/report/: index.html
criterion/report/: index.html
reports/: SMHasher3_ahash.txt  SMHasher3_ahash_folded.txt  SMHasher3_wyhash_3.txt  SMHasher_ahash_folded.txt  SMHasher_wyhash_3.txt
smhasher/: SMHasher_ahash64.txt  wyhash_33_3.txt
smhasher/smhasher/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Hashes.h  Makefile  cmake_install.cmake  main.cpp
smhasher3/: CMakeLists.txt
smhasher3/hashes/: Hashsrc.cmake  rust-ahash.cpp  wyhash.cpp  wyhash_rust.cpp
smhasher3/tests/: SeedTest.h
src/: lib.rs  main.rs
src/v1/: mod.rs
wyhash-cbindings/: Cargo.toml  install.sh
wyhash-cbindings/src/: lib.rs
(+901 files in other folders)
